# veloce

./: .gitignore  CMakeLists.txt  COMPLETENESS.md  CONTRIBUTING.md  README.md  TESTING.md  imgui.ini  run_all_tests.sh  run_tests.sh
.githooks/: pre-push
.github/workflows/: accuracy.yml
cores/gb/: CMakeLists.txt  README.md
cores/gb/src/: apu.cpp  apu.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  debug.hpp  lr35902.cpp  lr35902.hpp  plugin.cpp  ppu.cpp  ppu.hpp  types.hpp
cores/gb/src/mbc/: mbc.cpp  mbc.hpp  mbc1.cpp  mbc1.hpp  mbc3.cpp  mbc3.hpp  mbc5.cpp  mbc5.hpp
cores/gb/tests/: .gitignore  run_tests.py  run_tests.sh  test_config.json  test_runner.py
cores/gba/: CMakeLists.txt  IRQ_ANALYSIS.md  README.md
cores/gba/src/: apu.cpp  apu.hpp  arm7tdmi.cpp  arm7tdmi.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  debug.hpp  dma.cpp  plugin.cpp  ppu.cpp  ppu.hpp  timer.cpp  types.hpp
cores/gba/tests/: README.md  imgui.ini  run_tests.sh  runner.py  test_config.json  test_runner.py
cores/nes/: CMakeLists.txt  README.md
cores/nes/src/: apu.cpp  apu.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  debug.hpp  nes_plugin.cpp  ppu.cpp  ppu.hpp  trace.cpp  trace.hpp
cores/nes/src/mappers/: mapper.cpp  mapper.hpp  mapper_000.hpp  mapper_004.cpp  mapper_004.hpp  mapper_005.cpp  mapper_005.hpp  mapper_007.cpp  mapper_009.hpp  mapper_011.cpp  mapper_016.cpp  mapper_016.hpp  mapper_019.cpp  mapper_019.hpp  mapper_020.cpp  mapper_020.hpp  mapper_024.cpp  mapper_024.hpp  mapper_069.cpp  mapper_069.hpp  mapper_071.cpp  mapper_085.cpp  mapper_085.hpp  mapper_vrc.cpp  mapper_vrc.hpp
cores/nes/tests/: run_tests.sh  runner.py  test_config.json  test_runner.py
cores/snes/: CMakeLists.txt  README.md
cores/snes/src/: apu.cpp  apu.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  debug.hpp  dma.cpp  dma.hpp  dsp.cpp  dsp.hpp  ppu.cpp  ppu.hpp  snes_plugin.cpp  spc700.cpp  spc700.hpp
cores/snes/tests/: .gitignore  README.md  run_tests.sh  test_config.json  test_runner.py
include/emu/: audio_plugin.hpp  emulator_plugin.hpp  game_plugin.hpp  input_plugin.hpp  netplay_plugin.hpp  plugin_types.hpp  speedrun_tools_plugin.hpp  tas_plugin.hpp  video_plugin.hpp
plugins/audio_default/: CMakeLists.txt  README.md
plugins/audio_default/src/: default_audio_plugin.cpp
plugins/game_plugin_common/: CMakeLists.txt
plugins/game_plugin_common/include/game_plugin_common/: splits_file.hpp  timer_core.hpp  timer_types.hpp
plugins/game_plugin_common/include/game_plugin_common/panels/: timer_panel.hpp
plugins/game_plugin_common/src/: splits_file.cpp  timer_core.cpp
plugins/game_plugin_common/src/panels/: timer_panel.cpp
plugins/input_default/: CMakeLists.txt  README.md
plugins/input_default/src/: default_input_plugin.cpp
plugins/nes/: README.md
plugins/nes/src/: apu.cpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  cpu.cpp  nes_plugin.cpp  ppu.cpp  ppu.hpp
plugins/nes/src/mappers/: mapper.hpp  mapper_000.cpp  mapper_001.cpp  mapper_001.hpp  mapper_002.cpp  mapper_002.hpp  mapper_003.cpp  mapper_003.hpp  mapper_004.cpp  mapper_004.hpp  mapper_007.hpp  mapper_009.cpp  mapper_010.cpp  mapper_010.hpp  mapper_011.hpp  mapper_034.cpp  mapper_034.hpp  mapper_066.cpp  mapper_066.hpp  mapper_071.hpp  mapper_079.cpp  mapper_079.hpp  mapper_206.cpp  mapper_206.hpp
plugins/netplay_default/: CMakeLists.txt
plugins/netplay_default/src/: default_netplay_plugin.cpp  default_netplay_plugin.cpp.tmp.27789.1767388333872  netplay_input_manager.cpp  netplay_input_manager.hpp
plugins/speedrun_tools_default/: CMakeLists.txt  README.md
plugins/speedrun_tools_default/src/: default_speedrun_tools_plugin.cpp
plugins/tas_default/: CMakeLists.txt  README.md
plugins/tas_default/src/: default_tas_plugin.cpp
src/core/: application.cpp  application.hpp  audio_manager.cpp  audio_manager.hpp  input_manager.cpp  netplay_manager.cpp  netplay_manager.hpp  paths_config.cpp  paths_config.hpp  plugin_config.cpp  plugin_config.hpp  plugin_manager.cpp  plugin_manager.hpp  plugin_registry.cpp  plugin_registry.hpp  savestate_manager.cpp  savestate_manager.hpp  screenshot.cpp  screenshot.hpp  speedrun_manager.cpp  speedrun_manager.hpp
src/gui/: gui_manager.cpp  gui_manager.hpp  netplay_panel.cpp  netplay_panel.hpp  notification_manager.cpp  notification_manager.hpp  paths_config_panel.cpp  paths_config_panel.hpp  plugin_config_panel.cpp  plugin_config_panel.hpp
tests/: CMakeLists.txt  README.md  run_all.py  validate_configs.py
tests/veloce_testkit/: __init__.py  detect.py  harness.py  runner.py  schema.py  scoring.py  selftest.py
